Created connection with google maps and added store markers

--- a/app/code/Gustav/Thesis/view/frontend/layout/storelocator_frontend_index.xml
+++ b/app/code/Gustav/Thesis/view/frontend/layout/storelocator_frontend_index.xml
@@ -2,7 +2,10 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="Gustav\Thesis\Block\Frontend\StoreLocator" name="storelocator.content" template="Gustav_Thesis::storelocator.phtml"/>
+            <block name="storelocator.content" template="Gustav_Thesis::storelocator.phtml">
+                <block class="Gustav\Thesis\Block\Frontend\Stores" name="store.list" template="Gustav_Thesis::stores.phtml" />
+                <block class="Gustav\Thesis\Block\Frontend\Maps" name="store.map" template="Gustav_Thesis::maps.phtml" />
+            </block>
         </referenceContainer>
     </body>
 </page>
