--- a/app/design/frontend/Gustav/thesis/Magento_Theme/web/css/source/blocks/_header.less
+++ b/app/design/frontend/Gustav/thesis/Magento_Theme/web/css/source/blocks/_header.less
@@ -6,5 +6,23 @@
     .header {
         max-width: none !important;
         background-color: @color-storelocator-header;
+
+        .nav-toggle::before,
+        .action .nav-toggle {
+            display: none !important;
+        }
+    }
+}
+
+
+//
+//  Common
+//  _____________________________________________
+
+.media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
+    .header {
+        .logo {
+            margin: 0 0 10px;
+        }
     }
 }
