--- a/app/code/Gustav/Thesis/view/frontend/templates/stores.phtml
+++ b/app/code/Gustav/Thesis/view/frontend/templates/stores.phtml
@@ -1,17 +1,32 @@
 <?php
 /** @var \Magento\Framework\View\Element\Template $block */
 /** @var \Magento\Framework\Escaper $escaper */
-?>
+/** @var \Gustav\Thesis\Block\Frontend\Stores $block */
 
-
-<?php
-$stores = $block->getStores();
+$categories = $block->getCategories();
 ?>
 <div class="store-locator">
-    <h1>Hello Stores!</h1>
-    <?php foreach ($stores as $store): ?>
-        <div class="store">
-            <h3><?= $block->escapeHtml($store->getStoreName()) ?></h3>
-        </div>
-    <?php endforeach; ?>
+<div class="store-filters">
+    <select class="category-filter">
+        <option value="">All Categories</option>
+        <?php foreach ($categories as $category): ?>
+            <option value="<?= $escaper->escapeHtmlAttr($category->getId()) ?>">
+                <?= $escaper->escapeHtml($category->getCategoryName()) ?>
+            </option>
+        <?php endforeach; ?>
+    </select>
 </div>
+
+<div class="js-store-list"></div>
+</div>
+
+<script type="text/x-magento-init">
+    {
+        ".js-store-list": {
+            "storeListWidget": {
+                "actionUrl": "<?= $escaper->escapeUrl($block->getUrl('storelocator/frontend/storelist')) ?>",
+            "pageSize": 5
+        }
+    }
+}
+</script>
