--- a/app/design/frontend/Gustav/thesis/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Gustav/thesis/Magento_Theme/layout/default.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <head>
+        <link rel="preconnect" src="https://fonts.googleapis.com" src_type="url" />
+        <link rel="preconnect" src="https://fonts.gstatic.com" src_type="url" />
+        <css src="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&amp;display=swap" src_type="url" />
+    </head>
+
     <body>
         <!-- Remove -->
         <referenceBlock name="copyright" remove="true" />
