--- a/app/design/frontend/Gustav/thesis/web/css/source/variables/custom/_colors.less
+++ b/app/design/frontend/Gustav/thesis/web/css/source/variables/custom/_colors.less
@@ -1,2 +1,5 @@
 // Colors
-@color-storelocator-header: #0B5563;
+@color-storelocator-blue: #4281A4;
+@color-general-black: #333;
+@color-general-white: white;
+@color-general-light-grey: #f5f5f5;
