Styled storelocator with map for mobile

--- a/app/design/frontend/Gustav/thesis/web/css/source/variables/custom/_colors.less
+++ b/app/design/frontend/Gustav/thesis/web/css/source/variables/custom/_colors.less
@@ -3,3 +3,6 @@
 @color-general-black: #333;
 @color-general-white: white;
 @color-general-light-grey: #f5f5f5;
+@color-general-light-slate-grey: lightslategrey;
+@color-general-darker-grey: #ddd;
+
