--- a/app/design/frontend/Gustav/thesis/Magento_Cms/web/css/source/pages/_storelocator.less
+++ b/app/design/frontend/Gustav/thesis/Magento_Cms/web/css/source/pages/_storelocator.less
@@ -12,6 +12,31 @@
 
                 .map {
                     height: 350px;
+
+                    .info-window-container {
+                        .info-window-name {
+                            font-weight: @font-weight__bold;
+                            margin: 8px 0 4px;
+                        }
+
+                        .info-window-address {
+                            margin-bottom: 1px;
+                            color: @color-general-light-slate-grey;
+                        }
+
+                        .info-window-location {
+                            color: @color-general-light-slate-grey;
+                            margin-bottom: 8px;
+                        }
+
+                        .info-window-contact {
+                            color: @color-general-light-slate-grey;
+
+                            .contact-hours {
+                                margin-bottom: 1px;
+                            }
+                        }
+                    }
                 }
 
                 .store-locator-main {
@@ -23,7 +48,6 @@
                         display: flex;
                         flex-direction: row;
                         justify-content: center;
-                        margin-top: 15px;
 
                         .store-locator {
                             width: 90%;
@@ -48,6 +72,88 @@
                                     }
                                 }
                             }
+
+                            .js-store-list {
+                                margin-top: 10px;
+
+                                .stores-list {
+                                    .store-container {
+                                        display: flex;
+                                        flex-direction: column;
+                                        align-items: flex-start;
+                                        max-width: 400px;
+                                        padding-bottom: 15px;
+                                        border-bottom: 1px solid @color-general-darker-grey;
+
+                                        .store-name-container {
+                                            .store-name {
+                                                font-weight: @font-weight__bold;
+                                                margin: 15px 0 4px;
+                                            }
+                                        }
+
+                                        .store-info-contact-wrapper {
+                                            display: flex;
+                                            flex-direction: row;
+                                            justify-content: space-between;
+                                            width: 100%;
+                                            color: @color-general-light-slate-grey;
+                                            font-size: 12px;
+                                            font-weight: @font-weight__light;
+
+                                            .store-info-container {
+                                                .store-address {
+                                                    margin-bottom: 0;
+                                                }
+
+                                                .store-location-container {
+                                                    display: flex;
+                                                    flex-direction: row;
+
+                                                    .store-city {
+                                                        margin-right: 5px;
+                                                    }
+
+                                                    .store-postcode {
+                                                        margin-right: 5px;
+                                                    }
+                                                }
+                                            }
+
+                                            .store-contact-container {
+                                                .store-hours {
+                                                    margin-bottom: 0;
+                                                }
+                                            }
+                                        }
+
+                                        .show-on-map-container {
+                                            .show-on-map {
+                                                color: @color-storelocator-blue;
+                                                font-weight: @font-weight__bold;
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+
+                            .pagination {
+                                max-width: 400px;
+                                display: flex;
+                                justify-content: center;
+                                gap: 5px;
+                                margin-top: 10px;
+
+                                a {
+                                    font-weight: @font-weight__bold;
+                                    color: @color-storelocator-blue;
+                                    font-size: 16px;
+                                }
+
+                                .current-page {
+                                    color: @color-general-black;
+                                }
+                            }
                         }
                     }
                 }
@@ -64,6 +170,10 @@
     .storelocator-frontend-index {
         .page-main {
             padding: 0;
+
+            .store-locator-wrapper {
+                margin-top: 15px;
+            }
         }
     }
 }
