--- a/app/design/frontend/Gustav/thesis/Magento_Cms/web/css/source/pages/_storelocator.less
+++ b/app/design/frontend/Gustav/thesis/Magento_Cms/web/css/source/pages/_storelocator.less
@@ -195,18 +195,38 @@
                 display: flex;
                 flex-direction: row;
                 justify-content: space-around;
-                width: 80%;
+                width: 100%;
 
                 .store-locator {
-                    width: 50%;
+                    width: 350px !important;
+                    padding-right: 15px;
                 }
 
                 .map {
                     max-width: 500px;
                     height: 500px;
-                    margin-left: auto;
                     flex: 1;
                 }
+            }
+        }
+    }
+}
+
+.media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__l) {
+    .storelocator-frontend-index {
+        .column.main {
+            .store-locator-main {
+                width: 80%;
+            }
+        }
+    }
+}
+
+.media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__xl) {
+    .storelocator-frontend-index {
+        .column.main {
+            .store-locator-main {
+                width: 75%;
             }
         }
     }
