Updated font weight and text

--- a/app/design/frontend/Gustav/thesis/Magento_Cms/web/css/source/pages/_home.less
+++ b/app/design/frontend/Gustav/thesis/Magento_Cms/web/css/source/pages/_home.less
@@ -40,7 +40,7 @@
                           margin-left: 20px;
 
                           button {
-                              font-weight: @font-weight__regular;
+                              font-weight: @font-weight__bold;
                               box-shadow: 1px 0 35px rgba(151, 149, 149, (50%)),
                               0 10px 5px rgba(151, 149, 149, (10%));
                           }
