--- a/app/design/frontend/Gustav/thesis/Magento_Theme/templates/custom-home-page.phtml
+++ b/app/design/frontend/Gustav/thesis/Magento_Theme/templates/custom-home-page.phtml
@@ -1,6 +1,6 @@
   <div class="content-container">
       <h1 class="welcome-title">Welcome</h1>
-      <h3 class="info-title">Click the link below to locate our stores</h3>
+      <h3 class="info-title">Click the link below to find our stores</h3>
       <div class="button-container">
           <a href="storelocator/frontend/index">
               <button class="action primary">Store Locator</button>
