Added comments to classes and functions

--- a/app/code/Gustav/Thesis/view/frontend/layout/storelocator_frontend_index.xml
+++ b/app/code/Gustav/Thesis/view/frontend/layout/storelocator_frontend_index.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
+        <!-- Defines the main content area of the store locator page -->
         <referenceContainer name="content">
             <block name="storelocator.content" template="Gustav_Thesis::storelocator.phtml">
                 <block class="Gustav\Thesis\Block\Frontend\Stores" name="store.list" template="Gustav_Thesis::stores.phtml" />
